Fix button selection on mobile Safari

--- a/src/components/keypad.css
+++ b/src/components/keypad.css
@@ -1,4 +1,5 @@
 .key, .pressedKey {
+  padding: 0;
   color: #eee;
   border: none;
   border-radius: 4px;
@@ -12,6 +13,8 @@
   transition: background 250ms, transform 250ms;
   cursor: pointer;
   user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
 }
 .key {
   composes: lightBackground from "./common.css";
